<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <EditText
            android:id="@+id/etxt_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:nextFocusDown="@+id/etxt_aniversario" />

        <EditText
            android:id="@+id/etxt_aniversario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_nome"
            android:hint="@string/aniversario"
            android:nextFocusDown="@+id/etxt_salario"/>

        <EditText
            android:id="@+id/etxt_salario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_aniversario"
            android:hint="@string/salario"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:id="@+id/enviar_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_salario"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/botao_adicionar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adicionar" />

            <Button
                android:id="@+id/botao_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>